[package]
name = "ampkt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-io = "1.12.0"
clap = { version = "4.1.6", features = ["derive"] }
futuresdr = { version = "0.0.27", features = ["soapy"] }
soapysdr = "0.3.2"
tun-tap = "0.1.3"
